# ECG-BLE

./: .gitignore  .gitlab-ci.yml  README.md  state_diagram.puml
application/: CMakeLists.txt  CMakePresets.json  prj.conf
application/boards/: nrf52833dk_nrf52833.overlay
application/src/: ble-lib.c  ble-lib.h  extra.c  heartrate.c  heartrate.h  main copy.c  main.c  read_temperature_sensor.c  read_temperature_sensor.h
testing/: battery_measurements.csv  technical_report.ipynb  temperature_measurements.csv
